--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -14,7 +14,6 @@
 </note>
 
 <note version="0.9.0.5">
-<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.5</xhtml:b></item>
 <item>● <module>TeamPopupLinks</module>: Промењен формат за постављање персонализованих линкова</item>
 <item>● <module>MatchSimulator</module>: Поправка за копирање оцена делова терена</item>
 <item>● <module>NewMail</module>: враћена опција за звучно обавештење</item> 
@@ -24,28 +23,33 @@
 <item>● Колекција линкова <module>Links</module> пребачена на други сервер</item>
 <item>● Још неке поправке ради испуњавања стандарда за Фајерфокс екстензије - AMO</item>
 <item>● <module>Matchreport</module> сада приказује текстуални опис типа догађаја кад се мишем пређе преко иконица(само на Енглеском језику)</item>
-<item></item>
-<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.4</xhtml:b></item>
+</note>
+
+<note version="0.9.0.4">
 <item>● Колекција линкова <module>Links</module> пребачена на други сервер</item>
 <item>● Додати текстуални описи за догађаје на мечу на енглеском језику у модулу <module>MatchReportFormat</module></item>
 <item>● Активирани модули <module>MatchReportFormat</module> и <module>MatchPlayerColoring</module> за мечеве са турнира</item>
-<item></item>
-<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.3</xhtml:b></item>
+</note>
+
+<note version="0.9.0.3">
 <item>● Исправке за неколико модула после промена изгледа страница</item>
-<item></item>
-<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.2</xhtml:b></item>
+</note>
+
+<note version="0.9.0.2">
 <item>● Исправка за последњу верзију Chrome због које је модул <module>LoyaltyDisplay</module> блокирао</item>
 <item>● Поправљени линкови до поставе у мечу за омладинце у модулу <module>MatchReportFormat</module></item>
 <item>● <module>MatchSimulator</module> побољшана формула за утицај кондиције</item>
 <item>● Нове иконице за специјалности играча</item>
 <item>● Неколико ажурираних превода</item>
-<item></item>
-<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.1</xhtml:b></item>
+</note>
+
+<note version="0.9.0.1">
 <item>● Поправљене (ненамерне) претеране дозволе за Chrome</item>
 <item>● Поправљен модул <module>LiveAlert</module> </item>
 <item>● Поправке за одређене 'css' проблеме (за Chrome, Opera, Safari)</item>
-<item></item>
-<item><xhtml:b>Промене у верзији Фокстрик 0.9</xhtml:b></item>
+</note>
+
+<note version="0.9">
 <item><xhtml:b>Означавање активних Фокстрик функција на страници</xhtml:b></item>
 <item>Такође смо убацили и функцију за означавање активних Фокстрик функција како би их лакше препознали и пронашли одговарајуће модуле одговорне за њих. Да укључите или искључите означавање свих Фокстрик опција активних на одређеној страници, кликните на ознаку Фокстрик верзије која се налази у доњем десном углу сваке странице, поред ознаке Хеттрик сервера на којем сте улоговани. Након првог освежавања странице, пређите мишем изнад означених делова да би вам се приказало и име модула који је одговоран за ту функцију.</item>
 <item></item>
