*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8980 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -1174,6 +1174,7 @@ module.link=Možete kopirati i zalijepiti ovaj link na forumu za usmjeravanje ov
 
 foxtrick.showReleaseNotes=Prikaži obavijesti nakon svakog ažuriranja
 foxtrick.versionReleaseNotes=Prikaži obavijesti za\:
+foxtrick.Version=Verzija\:
 
 about.copyright=Autorsko pravo
 about.maintainers=Održavatelji
