*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8988 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1175,6 +1175,7 @@ module.link=Du kannst diesen Link kopieren und im Forum einfügen um hierher zu 
 
 foxtrick.showReleaseNotes=Anzeige der Release Notes nach einem FoxTrick-Update
 foxtrick.versionReleaseNotes=Anzeige der Release Notes für\:
+foxtrick.Version=Version\:
 
 about.copyright=Copyright
 about.maintainers=Projektmanagement
