--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -1174,6 +1174,7 @@ module.link=Podés copiar y pegar este vínculo en el foro para mandarte aquí
 
 foxtrick.showReleaseNotes=Mostrar notas de la versión luego de que Foxtrick se actualice
 foxtrick.versionReleaseNotes=Notas de la versión para\:
+foxtrick.Version=Versión\:
 
 about.copyright=Copyright
 about.maintainers=Responsables de mantenimiento
