*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8989 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -1,6 +1,7 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
 properties.language=Magyar fordítás
+properties.translators=Fejlesztők
 
 # Hints:
 # translate the right side of the = sign.
@@ -206,6 +207,10 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Megnöveli a helyet a parancsikonokhoz
 foxtrick.ExtraShortcuts.Supporterstats.desc=Hivatkozás a támogatói statisztikákhoz
 foxtrick.ExtraShortcuts.Transfers.desc=Hivatkozás a játékospiachoz a csapat főoldalán
 foxtrick.ExtraShortcuts.Prefs.desc=Hivatkozás a FoxTrick-beállítások oldalhoz
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
+foxtrick.ExtraShortcuts.No9.desc=No9 Radio
+foxtrick.ExtraShortcuts.Latehome.desc=Latehome rádió
+foxtrick.ExtraShortcuts.Downtime.desc=Downtime Rádió
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Kimásolja a mérkőzésazonosítót, amikor a bajnoki/kupa-/barátságos mérkőzés ikonra kattintasz a Mérkőzések vagy a Mérkőzések archívuma oldalon. Támogatóknál az Egymás ellen oldalon („A legutóbbi mérkőzések” és az „Egymás ellen” lapon) is használható.
 foxtrick.HeaderFix.desc=Görgetés közben rögzíti a fejlécet (más Hattrick-oldalakon is működik)
@@ -314,6 +319,7 @@ foxtrick.MyMonitor.desc=A barátok és riválisok legutóbbi meccseinek figyelé
 # IN-GAME STRINGS. translate first
 
 #Embed Media
+foxtrick.EmbedMedia.EmbeddedImage=Beágyazott kép
 
 #icons
 foxtrick.ExtraShortcuts.statistics=Statisztikák
@@ -411,12 +417,14 @@ CopyPosting.style.raw=nyers
 CopyPosting.style.last=legutóbbi
 
 ForumYouthIcons.label=Ifikre mutató hivatkozások
+ForumYouthIcons.labelTournament=Versenyek
 ForumYouthIcons.labelToolbar=Fő hivatkozások
 ForumYouthIcons.youthplayerid=Ifijátékos-azonosító beszúrása
 ForumYouthIcons.youthteamid=Ificsapat-azonosító beszúrása
 ForumYouthIcons.youthmatchid=Ifimeccs-azonosító beszúrása
 ForumYouthIcons.youthseries=Ifibajnokság-azonosító beszúrása
 
+ForumOtherIcons.label=Egyéb
 ForumOtherIcons.debug=Foxtrick hibakeresési napló beszúrása.
 ForumOtherIcons.settings=Foxtrick beállítások beszúrása.
 
@@ -568,6 +576,7 @@ match.player.unknown=Ismeretlen játékos
 General=Általános
 
 PlayerNumber=Mezszám
+PlayerNumber.abbr=\#
 
 TSI=Total Skill Index
 TSI.abbr=TSI
@@ -618,6 +627,7 @@ Last_position=A legutóbbi poszt
 Last_position.abbr=Ut. poszt
 #following string uses pluralForms
 Last_match_played_as_at=%1 percet játszott %2 pozícióban a legutóbbi mérkőzésén, ekkor\: %3.
+Last_match_didnot_play=Nem játszott még.
 
 Bruised=Tapaszos
 Bruised.abbr=Tap.
@@ -970,6 +980,12 @@ button.import=Importálás
 button.restoreDefault=Alapértelmezések visszaállítása
 button.disableAll=Összes kikapcsolása
 
+status.loading=Betöltés...
+status.loading.abbr=…
+status.error=Hiba
+status.error.abbr=\!
+status.unknown=Ismeretlen
+status.unknown.abbr=?
 
 oauth.authorize=Engedélyezd, hogy a FoxTrick hozzáférhessen a csapatod adataihoz
 oauth.instructions=Hamarosan megjelenik egy, a chpp.hattrick.org oldalra mutató hivatkozás.\nNyisd meg a hivatkozást, és az igazoló kód elkéréséhez add meg a felhasználóneved és a jelszavad. A kódot másold az alul látható mezőbe. Így engedélyezed a Foxtricknek, hogy hozzáférhessen a csapatod adataihoz.\nA FoxTrick a folyamat során nem ismeri a jelszavadat.
@@ -1046,6 +1062,7 @@ link.recentChanges=A legutóbbi módosítások
 
 foxtrick.showReleaseNotes=A FoxTrick-frissítések utáni kiadási megjegyzések megjelenítése
 foxtrick.versionReleaseNotes=Kiadási megjegyzések megjelenítése a következőhöz\:
+foxtrick.Version=Verzió\:
 
 about.copyright=Copyright
 about.developers=Fejlesztők
