*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8992 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -160,6 +160,8 @@ foxtrick.RapidId.desc=Зручнае поле ўводу наверсе стар
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
