--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -288,6 +288,8 @@ foxtrick.TableSort.desc=Fa que totes les taules correctes i que tinguin capçale
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
