--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -384,6 +384,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Jako HatStats
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Vložený obrázek
 
