--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -192,6 +192,8 @@ foxtrick.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
