--- a/content/locale/el/foxtrick.properties
+++ b/content/locale/el/foxtrick.properties
@@ -257,6 +257,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Ως HatStats
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Ενσωματωμένη εικόνα
 
