--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -78,11 +78,16 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after 
 foxtrick.MatchOrderInterface.SwapPositions.desc=Add a link to swap players from left to right
 foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps rating prediction on top
 foxtrick.MatchSimulator.RatingsBelow.desc=Displays prediction below
+foxtrick.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
 
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#Save for work
+foxtrick.SafeForWork.title=Title
+foxtrick.SafeForWork.icon=Icon
 
 #Embed Media
 
