--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -385,6 +385,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Como Hatstats
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Imagen incustrada
 
