--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -360,6 +360,8 @@ foxtrick.RatingsDisplay.DenominationsRange.desc=En un rango de 0-20
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
