--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -382,6 +382,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Hatstatteina
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Upotettu Kuva
 
