--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -279,6 +279,8 @@ foxtrick.Filter.desc=Ajoute des filtres à la page des joueurs
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Image incrustée
 
