--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -139,6 +139,8 @@ foxtrick.MatchIncome.desc=Wedstriidynkommen yn wedstriidrapport
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
