--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -318,6 +318,8 @@ foxtrick.MyMonitor.desc=A barátok és riválisok legutóbbi meccseinek figyelé
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Beágyazott kép
 
