--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -388,6 +388,8 @@ foxtrick.RatingsDisplay.HatStats.desc=HatStats
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=이미지 삽입
 
@@ -655,7 +657,7 @@ match.player.unknown=알려지지 않은 선수
 
 General=일반
 
-PlayerNumber=선수 수
+PlayerNumber=등번호
 PlayerNumber.abbr=\#
 
 TSI=Total Skill Index
