--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -208,6 +208,8 @@ foxtrick.MatchTables.RemoveTime.desc=D'Matchzäit gëtt an der aktueller Matchta
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
