--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -386,6 +386,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Į „Hatstats“
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Įkeltas paveikslėlis
 
