--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -89,6 +89,8 @@ foxtrick.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitāte
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
