--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -244,6 +244,8 @@ foxtrick.RapidId.desc=Kaxxa konvenjenti fuq in-naħa ta' fuq tal-paġna biex tku
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
