--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -286,6 +286,8 @@ foxtrick.TableSort.desc=Gjer at alle 'skikkelege' tabellar sorterbare som har ei
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
