--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -114,6 +114,8 @@ foxtrick.SkillColoring.skill_select.desc=Viser også nummer på overgangssøk f.
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
