--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -279,6 +279,8 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista ID tematów zawsze
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
