--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -240,6 +240,8 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Permanecer na página de ordens dep
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
