--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -173,6 +173,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Kot HatStati
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Vgnezdena slika
 
