--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -211,6 +211,8 @@ foxtrick.MatchTables.RemoveTime.desc=Heq kohet e ndeshjeve te tabela
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
