--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -367,6 +367,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Som HatStats
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Inbäddad bild
 
