--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -276,6 +276,8 @@ foxtrick.TableSort.desc=Làm cho tất cả các bảng  'hợp lệ' có thể 
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
