--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -326,6 +326,8 @@ foxtrick.MatchOrderInterface.Specialties.desc=نمایش تخصص بازیکن
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
