--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -180,6 +180,8 @@ foxtrick.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
