--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -388,6 +388,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Als HatStats
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Geïntegreerde afbeelding
 
