--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -174,6 +174,8 @@ foxtrick.HighlightCupwins.desc=Виділяє команду-переможця 
 
 # IN-GAME STRINGS. translate first
 
+#Save for work
+
 #Embed Media
 
 #icons
