Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8999 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -382,11 +382,16 @@ foxtrick.Filter.desc=Додaје филтере на страници Најбо
 foxtrick.RatingsDisplay.desc=Приказ просека оцена у статистици 
 foxtrick.RatingsDisplay.DenominationsRange.desc=Деноминације у распону од 0-20
 foxtrick.RatingsDisplay.HatStats.desc=Хатстатс
+foxtrick.SafeForWork.desc=Замењује фавикон и Хеттрик наслов у отвореним табовима
 
 # ----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#Save for work
+foxtrick.SafeForWork.title=Наслов
+foxtrick.SafeForWork.icon=Фавикон
 
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Уграђена слика
@@ -579,6 +584,7 @@ matchOrder.options=Опције
 matchOrder.staminaDiscount=Умањење кондиције
 matchOrder.staminaDiscount.title=Оцене делова терена су умањене у складу са доприносом играчевих вештина за тај сектор
 matchOrder.summary=Укупно
+matchOrder.tournamentMatch=Меч на турниру
 
 #Skills
 Playmaking=Плејмејкинг
@@ -1154,6 +1160,7 @@ foxtrick.prefs.loadNotice=Унесите ваша раније сачувана 
 foxtrick.prefs.captionDisableSettings=Искључи Фокстрик
 foxtrick.prefs.stagepref=Искључи Фокстрик на Стејџ серверу
 foxtrick.prefs.disableTemporaryLabel=Привремено искључи Фокстрик
+foxtrick.prefs.highlightLabel=Означи све Фокстрикове додатке
 foxtrick.prefs.saved=Подешавања су сачувана!
 foxtrick.prefs.loaded=Успешно сте увезли подешавања!
 foxtrick.prefs.dismissNotice=(кликните да уклоните ову поруку)
@@ -1193,6 +1200,7 @@ revoke_permissions_ask=Да ли сте сигурни да желите да у
 
 foxtrick.prefs.AdditionalOptions=Додатне опције
 foxtrick.prefs.smallcopyicons=Убаци мале иконице за копирање у заглавље уместо посебног менија са стране
+foxtrick.prefs.anstoss2icons=Користи 'Anstoss2' колекцију иконица за специјалности играча
 foxtrick.prefs.DisplayHTMLDebugOutput=Прикажи додатне дебуг излазе на Хеттрик страници (за девелопере)
 
 foxtrick.prefs.permissionsHint=За %s је потребна дозвола да би радио. Дозволите приступ у наредном прозору. Уколико не дозволите приступ, модул ће остати искључен.
