*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9005 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -156,6 +156,7 @@ foxtrick.datetimestrings.short_days=d;d
 matchOrder.swapPositions=Swap sides
 matchOrder.staminaDiscount=Stamina effect
 matchOrder.staminaDiscount.title=Sector ratings are affected according to the contributions of each player to each sector
+matchOrder.tournamentMatch=Tournament match
 
 #Skills
 
@@ -314,6 +315,7 @@ oauth.instructions=A link to chpp.hattrick.org will appear below shortly. Open t
 
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, not personal settings.)
 # NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.highlightLabel=Highlight FoxTricks' features
 
 
 
@@ -325,6 +327,7 @@ foxtrick.Version=Version\:
 delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?
 delete_oauth_ask=Delete OAuth token/secret for TeamID  %s?
 
+foxtrick.prefs.anstoss2icons=Use Anstoss2 icons for specialties
 
 foxtrick.prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
 
