--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -381,6 +381,7 @@ foxtrick.Filter.desc=Añadir filtros en la parte superior de la página de jugad
 foxtrick.RatingsDisplay.desc=Muestra promedio de calificaciones en un estilo diferente
 foxtrick.RatingsDisplay.DenominationsRange.desc=En el rango de 0-20 denominaciones
 foxtrick.RatingsDisplay.HatStats.desc=Como HatStats
+foxtrick.SafeForWork.desc=Remplazar iconos y el texto del título de las pestañas de Hattrick
 
 # -----------------------------------------------------------------------------
 
@@ -388,6 +389,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Como HatStats
 # IN-GAME STRINGS. translate first
 
 #Save for work
+foxtrick.SafeForWork.title=Título
+foxtrick.SafeForWork.icon=Icono
 
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Imagen Embebida
