--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -26,7 +26,12 @@ pluralFormRuleID=pluralFormRule1
 #Forum direct page links
 #
 # please translate next lines again if needed
+foxtrick.TeamStats.Speciality.desc=התמחות
 foxtrick.TeamStats.Personality.desc=אישיות
+foxtrick.ExtraPlayerInfo.desc=הצג מידע נוסף של שחקנים בעמוד שחקנים.
+foxtrick.SeniorTeamShortCuts.desc=הוספת הקישורים לדף המאמן ולהרכב האחרון לתפריט "הקבוצה הבוגרת"
+foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=הצג רק על דפים של קבוצות אחרות
+foxtrick.SeniorTeamShortCuts.AllPages.desc=הצג בכל הדפים
 #ExtendedPlayerDetails
 #ExtraShortcuts
 #CopyMatchID
@@ -36,6 +41,7 @@ foxtrick.LeagueNewsFilter.all.desc=הצג את כל החדשות
 foxtrick.LeagueNewsFilter.transfers.desc=הצג רק העברות
 foxtrick.LeagueNewsFilter.lineup_changes.desc=הצג שינויים בהרכב בלבד
 #MoveManagerOnline
+foxtrick.TeamPopupLinks.Matches.desc=משחקים
 foxtrick.TeamPopupLinks.Players.desc=﻿שחקנים
 foxtrick.TeamPopupLinks.Guestbook.desc=﻿ספר אורחים
 foxtrick.TeamPopupLinks.TransferHistory.desc=היסטורית העברות
@@ -432,6 +438,7 @@ status.disabled=לא זמין
 # tabs in preferences page
 #tabs
 tab.main=ראשי
+tab.matches=משחקים
 tab.forum=פורום
 tab.alert=התראות
 tab.about=אודות
