--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -382,6 +382,7 @@ foxtrick.Filter.desc=최고 선수 페이지에 필터 추가
 foxtrick.RatingsDisplay.desc=다른 스타일로 평균 레이팅 표시
 foxtrick.RatingsDisplay.DenominationsRange.desc=0-20 등급 범위
 foxtrick.RatingsDisplay.HatStats.desc=HatStats
+foxtrick.SafeForWork.desc=Hattrick 탭의 아이콘과 제목을 교체
 
 # -----------------------------------------------------------------------------
 
@@ -389,6 +390,8 @@ foxtrick.RatingsDisplay.HatStats.desc=HatStats
 # IN-GAME STRINGS. translate first
 
 #Save for work
+foxtrick.SafeForWork.title=제목
+foxtrick.SafeForWork.icon=아이콘
 
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=이미지 삽입
