--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -382,6 +382,7 @@ foxtrick.Filter.desc=Dodaje filtere na vrh stranice igrača
 foxtrick.RatingsDisplay.desc=Prikazuje prosječne ocjene u drugom stilu
 foxtrick.RatingsDisplay.DenominationsRange.desc=U 0-20 denominacijskom rasponu
 foxtrick.RatingsDisplay.HatStats.desc=Kao HatStats
+foxtrick.SafeForWork.desc=Zamjenjuje ikonu i naslovni tekst Hattrickovih kartica
 
 # -----------------------------------------------------------------------------
 
@@ -389,6 +390,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Kao HatStats
 # IN-GAME STRINGS. translate first
 
 #Save for work
+foxtrick.SafeForWork.title=Naslov
+foxtrick.SafeForWork.icon=Ikona
 
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Ubačena slika
@@ -581,6 +584,7 @@ matchOrder.options=Opcije
 matchOrder.staminaDiscount=Smanjenje zbog izdržljivosti
 matchOrder.staminaDiscount.title=Ocjene pojedinih sektora se računaju prema igračevom doprinosu tom sektoru
 matchOrder.summary=Rezime
+matchOrder.tournamentMatch=Utakmica turnira
 
 #Skills
 Playmaking=Kreiranje
@@ -1155,6 +1159,7 @@ foxtrick.prefs.loadNotice=Zalijepite spremljene postavke u prostoru za tekst i p
 foxtrick.prefs.captionDisableSettings=Isključi Foxtrick
 foxtrick.prefs.stagepref=Isključi na pokusnom ('stage') serveru
 foxtrick.prefs.disableTemporaryLabel=Privremeno isključi
+foxtrick.prefs.highlightLabel=Označi Foxtrickove funkcije
 foxtrick.prefs.saved=Postavke spremljene\!
 foxtrick.prefs.loaded=Postavke učitane\!
 foxtrick.prefs.dismissNotice=(Kliknite za odbacivanje ove obavijesti)
@@ -1194,6 +1199,7 @@ revoke_permissions_ask=Jeste li sigurni da želite poništiti sve dozvole?
 
 foxtrick.prefs.AdditionalOptions=Dodatne opcije
 foxtrick.prefs.smallcopyicons=Prikazati male ikonice za kopiranje u zaglavlje umjesto u zaseban izbornik sa strane
+foxtrick.prefs.anstoss2icons=Koristi Anstoss2 ikone za specijalnosti
 foxtrick.prefs.DisplayHTMLDebugOutput=Prikazati dodatni 'debug izlaz' u podnožju stranice (samo za programere)
 
 foxtrick.prefs.permissionsHint=%s treba dozvolu za rad. Dopusti pristup u sljedećem dijaloškom okviru. Ako odbijete ova opcija će biti isključena.
