*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9014 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -315,7 +315,7 @@ oauth.instructions=A link to chpp.hattrick.org will appear below shortly. Open t
 
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, not personal settings.)
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.highlightLabel=Highlight FoxTricks' features
+foxtrick.prefs.featureHighlight=Highlight FoxTrick's features
 
 
 
