--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -17,8 +17,8 @@ pluralFormRuleID=pluralFormRule1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.ForumTemplates.desc=Podes empregar as mensaxes da conferencia como plantiñas para utilizalas máis adiante
-foxtrick.ForumTemplates.DefaultShow.desc=Amosa ou oculta  por defecto as túas plantiñas
+foxtrick.ForumTemplates.desc=Podes empregar as mensaxes da conferencia como plantillas para utilizalas máis adiante
+foxtrick.ForumTemplates.DefaultShow.desc=Amosa ou oculta  por defecto as túas plantillas
 foxtrick.ForumPreview.desc=Permite mostrar a vista previa dunha mensaxe (Da conferencia ou do correo)
 foxtrick.AddLeaveConfButton.desc=Engade un botón 'Abandoar conferencia' en cada carpeta da mesma
 foxtrick.StarsCounter.desc=Engade o número total de estrelas na páxina da aliñación do encontro
@@ -404,6 +404,7 @@ Red_card.abbr=V
 Speciality=Especialidade
 
 #following string uses pluralForms
+Last_match_played_as_at=Xogou %1 min como %2 no último encontro, o %3.
 
 
 Salary=Salario
@@ -611,7 +612,9 @@ CrossTable.noMatches=Aínda non se xogou ningún encontro.
 MyMonitor.header=O meu monitor
 #following string uses pluralForms
 MyMonitor.add=Monitoriza este equipo
+MyMonitor.removeTeam=Selecciona un equipo para borrar\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%n (%t, \#%i)
 MyMonitor.type.senior=Primeiro Equipo
 MyMonitor.type.youth=Xuvenil
 MyMonitor.type.nt=Nacional
@@ -625,6 +628,7 @@ TickerAlert.sound=Son
 
 # tickers
 ticker.type.welcome=Mensaxe de benvida
+ticker.type.supporter=Un equipo do cal eres supporter, conectouse
 ticker.type.forum=Respostas na conferencia
 ticker.type.challenge=Reto
 ticker.type.guestbook=Libro de visitas
@@ -771,5 +775,6 @@ revoke_permissions_ask=Estás seguro de querer refusar todos os permisos opciona
 
 foxtrick.prefs.AdditionalOptions=Opcións xerais
 
+foxtrick.prefs.permissionsHint=%s precisa permisos para traballar. Permítelle o acceso na seguinte fiestra. Se declinas, este módulo será desactivado.
 
 ###EOF
