--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -1159,7 +1159,7 @@ foxtrick.prefs.loadNotice=Zalijepite spremljene postavke u prostoru za tekst i p
 foxtrick.prefs.captionDisableSettings=Isključi Foxtrick
 foxtrick.prefs.stagepref=Isključi na pokusnom ('stage') serveru
 foxtrick.prefs.disableTemporaryLabel=Privremeno isključi
-foxtrick.prefs.highlightLabel=Označi Foxtrickove funkcije
+foxtrick.prefs.featureHighlight=Istakni Foxtrickove značajke
 foxtrick.prefs.saved=Postavke spremljene\!
 foxtrick.prefs.loaded=Postavke učitane\!
 foxtrick.prefs.dismissNotice=(Kliknite za odbacivanje ove obavijesti)
