--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -382,7 +382,7 @@ foxtrick.Filter.desc=Додaје филтере на страници Најбо
 foxtrick.RatingsDisplay.desc=Приказ просека оцена у статистици 
 foxtrick.RatingsDisplay.DenominationsRange.desc=Деноминације у распону од 0-20
 foxtrick.RatingsDisplay.HatStats.desc=Хатстатс
-foxtrick.SafeForWork.desc=Замењује фавикон и Хеттрик наслов у отвореним табовима
+foxtrick.SafeForWork.desc=Замењује фавикон и Хеттрик наслов у отвореним табовима да би вашем шефу било мање сумњиво. Најбоље да искључите и друге модуле који вас могу компромитовати, нарочито модуле за обавештења.
 
 # ----------------------------------------------------------------------------
 
@@ -1160,7 +1160,7 @@ foxtrick.prefs.loadNotice=Унесите ваша раније сачувана 
 foxtrick.prefs.captionDisableSettings=Искључи Фокстрик
 foxtrick.prefs.stagepref=Искључи Фокстрик на Стејџ серверу
 foxtrick.prefs.disableTemporaryLabel=Привремено искључи Фокстрик
-foxtrick.prefs.highlightLabel=Означи све Фокстрикове додатке
+foxtrick.prefs.featureHighlight=Означи све Фокстрикове додатке
 foxtrick.prefs.saved=Подешавања су сачувана!
 foxtrick.prefs.loaded=Успешно сте увезли подешавања!
 foxtrick.prefs.dismissNotice=(кликните да уклоните ову поруку)
